--- a/package.json
+++ b/package.json
@@ -6,17 +6,36 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "tsc": "tsc"
   },
   "dependencies": {
+    "@expo-google-fonts/dm-sans": "^0.2.2",
+    "@expo-google-fonts/dm-serif-display": "^0.2.2",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "styled-components": "^5.3.6",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/styled-components-react-native": "^5.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.32.0",
+    "eslint-config-universe": "^11.1.1",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "prettier": "2.8.3"
   },
-  "private": true
+  "private": true,
+  "eslintConfig": {
+    "extends": "universe/native"
+  }
 }
