--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.2.2",
     "@expo-google-fonts/dm-serif-display": "^0.2.2",
+    "@react-native-firebase/app": "^16.7.0",
+    "@react-native-firebase/auth": "^16.7.0",
+    "@react-native-firebase/firestore": "^16.7.0",
+    "@react-native-firebase/storage": "^16.7.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
