--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "tsc": "tsc"
   },
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.2.2",
     "@expo-google-fonts/dm-serif-display": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/app": "^16.7.0",
     "@react-native-firebase/auth": "^16.7.0",
     "@react-native-firebase/firestore": "^16.7.0",
@@ -19,11 +19,13 @@
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
+    "expo-linear-gradient": "~12.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-iphone-x-helper": "^1.3.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.6.3"
   },
@@ -32,7 +34,7 @@
     "@types/styled-components-react-native": "^5.2.1",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
-    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.32.0",
     "eslint-config-universe": "^11.1.1",
     "eslint-plugin-import-helpers": "^1.3.1",
