--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-native-firebase/auth": "^16.7.0",
     "@react-native-firebase/firestore": "^16.7.0",
     "@react-native-firebase/storage": "^16.7.0",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
+    "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "~12.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
@@ -26,8 +29,11 @@
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "styled-components": "^5.3.6",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
