--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/auth": "^16.7.0",
     "@react-native-firebase/firestore": "^16.7.0",
     "@react-native-firebase/storage": "^16.7.0",
+    "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "@types/react": "~18.0.24",
